<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PHPMYSQL</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Username">使用者</string>
    <string name="Password">密碼</string>
    <string name="LoginGet">使用者登錄</string>
    <string name="LoginPost">手動檢查</string>
    <string name="App">資料異常提示系統</string>
    <string name="ServerIP">伺服器IP</string>
    <string name="enableRegularCheck">啟動定時檢查</string>
    <string name="LoginStatus">登錄狀態</string>
    <string name="LoginRole">使用者身分</string>
    <string name="Status">未登入</string>
    <string name="Role">未指定</string>
    <string name="regularCheckPeriod">定檢週期(秒)</string>
    <string name="Choose">Choose Method</string>
    <string name="TimeValue">下次檢查時間</string>
    <string name="InitTimeValue">未啟動</string>
    <string name="loginButtonText">使用者登入</string>
    <string name="logoutButtonText">使用者登出</string>

    <string name="preAlertLabel">預警時間(天)</string>
    <string name="adminRoleDisplay">管理者</string>
    <string name="adminRoleDB">administrator</string>
    <string name="userRoleDisplay">使用者</string>
    <string name="userRoleDB">user</string>
    <string name="legalLogin">合法登入</string>
    <string name="illegalLogin">不合法登入</string>

    <string name="outstandingRecordLabel">異常資料筆數</string>

    <string-array name="preAlertDuration">
        <item>2</item>
        <item>5</item>
        <item>7</item>
        <item>10</item>
        <item>15</item>
    </string-array>

</resources>